change fontFamily and get margin for icons

--- a/sass/component/_FirstNav.scss
+++ b/sass/component/_FirstNav.scss
@@ -26,6 +26,9 @@
                 width: 100%;
 
                 font-size: size(xl);
+                i {
+                    margin-right: 1.5rem;
+                }
             }
         }
     }
