--- a/sass/component/_Products.scss
+++ b/sass/component/_Products.scss
@@ -10,6 +10,7 @@
         text-align: center;
         font-size: size(xl);
         margin-bottom: 5rem;
+        font-family: $font_Pattaya;
     }
     .Products_Wrapper {
         display: flex;
