--- a/sass/component/_SecondNav.scss
+++ b/sass/component/_SecondNav.scss
@@ -11,6 +11,9 @@
             font-size: size(xl);
             position: relative;
             padding: 1rem;
+            i {
+                padding-left: 1.5rem;
+            }
             .second_nav_underlist {
                 position: absolute;
                 top: 100%;
