--- a/sass/component/_FirstNav.scss
+++ b/sass/component/_FirstNav.scss
@@ -1,7 +1,53 @@
 .first_nav {
-    grid-column: 2/-1;
+    grid-column: 3/-1;
     grid-row: 1/2;
+    @include responsive(xl) {
+        grid-column: 3/-1;
+    }
+    @include responsive(lg) {
+        grid-column: 3/-1;
 
+        &_list {
+            grid-column-gap: 0.5rem;
+            &_item {
+                &:nth-child(1) {
+                    grid-column: 1/3 !important;
+                }
+                &:nth-child(2) {
+                    grid-column: 3/5;
+                }
+                &:nth-child(3) {
+                    grid-column: 5/6;
+                }
+                &:nth-child(4) {
+                    grid-column: 6/-1;
+                }
+                a {
+                    font-size: size(md) !important;
+                }
+            }
+        }
+    }
+    @include responsive(md) {
+    }
+    @include responsive(sm) {
+    }
+    @include responsive(xs) {
+        &_list {
+            &_item {
+                &:nth-child(1) {
+                    a {
+                        padding-left: 1rem !important;
+                    }
+                }
+                &:not(:nth-child(1)) {
+                    i {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
     &_list {
         display: grid;
         grid-template-columns: repeat(7, 1fr);
@@ -10,12 +56,9 @@
         &_item {
             display: flex;
             align-items: center;
-
             &:nth-child(1) {
                 grid-column: 1/5;
-
                 text-align: left;
-
                 a {
                     text-align: left;
                     padding-left: 5rem;
@@ -24,8 +67,16 @@
             a {
                 text-align: center;
                 width: 100%;
-
                 font-size: size(xl);
+                @include responsive(xl) {
+                    font-size: size(lg);
+                    i {
+                        margin-right: 0.5rem !important;
+                    }
+                }
+                @include responsive(lg) {
+                }
+
                 i {
                     margin-right: 1.5rem;
                 }
