--- a/sass/component/_SecondNav.scss
+++ b/sass/component/_SecondNav.scss
@@ -1,11 +1,51 @@
 .second_nav {
     margin-top: 3rem;
+    @include responsive(xs) {
+        &_list {
+            padding: 0 2rem !important;
+            .second_nav_list_item {
+                padding: 0rem !important;
+            }
+            .second_nav_underlist {
+                .underlist_item {
+                    margin-top: 1.5rem !important;
+                }
+            }
+        }
+    }
     &_list {
         width: 50%;
         margin: 0 auto;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        @include responsive(xl) {
+            width: 80%;
+            &_item {
+                font-size: size(lg) !important;
+                .Gift {
+                    a {
+                        i {
+                            padding-left: 0.5rem !important;
+                        }
+                    }
+                }
+            }
+        }
+        @include responsive(md) {
+            width: 100%;
+            padding: 0 1rem;
+            &_item {
+                font-size: size(md) !important;
+            }
+            .Gift {
+                a {
+                    i {
+                        padding-left: 0.5rem !important;
+                    }
+                }
+            }
+        }
 
         &_item {
             font-size: size(xl);
@@ -20,7 +60,7 @@
                 left: 0;
                 width: 100%;
                 height: 0;
-                max-height: 500px;
+                max-height: 300px;
                 overflow: hidden;
                 text-align: center;
                 transition: all 0.5s ease-in-out;
@@ -37,7 +77,7 @@
             }
         }
         .Gift:hover .second_nav_underlist {
-            height: 180px !important;
+            height: 180px;
             transition: all 0.5s ease-in-out;
         }
     }
