--- a/sass/component/_heading.scss
+++ b/sass/component/_heading.scss
@@ -1,5 +1,10 @@
 .heading {
     grid-column: 1 /-1;
+    @include responsive(lg) {
+        &_text {
+            font-size: size(xl) * 1.5 !important;
+        }
+    }
     &_text {
         font-family: $font_Pattaya;
         text-align: center;
